ingress/kongIngressController/2-ngx-kong-ingress-dep.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngx-kong-ingress-dep

spec:
  replicas: 2
  selector:
    matchLabels:
      app: ngx-kong-ingress-dep

  template:
    metadata:
      labels:
        app: ngx-kong-ingress-dep
    spec:
      volumes:
      - name: ngx-conf-vol
        configMap:
          name: ngx-kong-ingress-cm

      containers:
      - image: nginx:alpine
        name: nginx
        ports:
        - containerPort: 80

        volumeMounts:
        - mountPath: /etc/nginx/conf.d
          name: ngx-conf-vol
