ingress/kongIngressController/5-ngx-kong-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ngx-kong-ing
spec:
  ingressClassName: kong-ink
  rules:
  - host: kong.test
    http:
      paths:
      - backend:
          service:
            name: ngx-kong-ingress-dep-svc
            port:
              number: 8066
        path: /
        pathType: Exact
status:
  loadBalancer: {}
